chore: update gitignore to include macos

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/unity,windows,visualstudiocode,visualstudio,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=unity,windows,visualstudiocode,visualstudio,linux
+# Created by https://www.toptal.com/developers/gitignore/api/linux,unity,windows,visualstudio,visualstudiocode,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=linux,unity,windows,visualstudio,visualstudiocode,macos
 
 ### Linux ###
 *~
@@ -15,6 +15,39 @@
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 ### Unity ###
 # This .gitignore file should be placed at the root of your Unity project directory
@@ -514,4 +547,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/unity,windows,visualstudiocode,visualstudio,linux
+# End of https://www.toptal.com/developers/gitignore/api/linux,unity,windows,visualstudio,visualstudiocode,macos
