--- a/.gitignore
+++ b/.gitignore
@@ -548,3 +548,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,unity,windows,visualstudio,visualstudiocode,macos
+
+# Include Unity packages manifest
+!/Packages/*
